# codex-forge

./: .gitignore  DELIVERY_SUMMARY.md  README.md  condaExport.ps1  condaImport.ps1  environment.yml  pyproject.toml  requirements_finetuning.txt  runScripts.ps1
data/: cleanFolders.ps1
data/corpus/indexes/: character_index.json  concept_index.json  magic_system_index.json  prophecy_index.json
data/evaluation/test_sets/: test_questions.json
documentation/: future-todos.md  lessons_learned.md  new Session.md  plan.md
src/: config.py  logger.py  paths.py  test.py
src/finetuning/: 02_finetune_embedding_model.py  03_finetune_embedding_model.py
src/training_pairs/: 01_generate_training_pairs.py  02_mix_marco_with_wot.py  data_loader.py  negative_miner.py  positive_finder.py  training_pair_generator.py
src/utils/: util_hugging_face_embedding.py
